<resources>
    <string name="app_name">CureTheVirus</string>
    <string name="play_game">play game</string>
    <string name="settings">settings</string>
    <string name="help">help</string>
    <string name="cure_the_virus">Cure The Virus</string>
    <string name="todo">TODO</string>
    <string name="gameDescHelp">Oh no! A deadly virus has been discovered and your job is to prevent the spread of the virus.
        Destroy each virus by clicking and revealing it on the board. However, each click is costly, as another person gets infected.
        Try to eliminate all viruses in as few clicks as possible! </string>
    <string name="game_help">Game Help</string>
    <string name="welcomeTitle">Cure the Virus</string>
    <string name="skipButton">skip</string>
    <string name="devNames">By Amos and Don</string>
    <string name="_4x6">4x6</string>
    <string name="_5x10">5x10</string>
    <string name="_6x15">6x15</string>
    <string name="back">Back</string>
    <string name="reset_statistics">Reset Statistics</string>
    <string name="board_size">Board Size:</string>
    <string name="of_mines"># of Viruses:</string>
    <string name="_20">20</string>
    <string name="_6">6</string>
    <string name="_10">10</string>
    <string name="of_scans_used">People infected:</string>
    <string name="mines_found">Virus(es) destroyed:</string>
    <string name="settingSharedPref">gameSettings</string>
    <string name="times_played">Times Played:</string>
    <string name="background_url">https://namitoledo.org/virus-background-01/</string>
    <string name="icon_url">https://icons8.com/icons/set/virus</string>
    <string name="back_button">Back</string>
    <string name="developers">Developed by Amos Ko and Don Abance</string>
    <string name="highscores">Highscores</string>
    <string name="https_opencoursehub_cs_sfu_ca_bfraser_grav_cms_cmpt276_home">https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home</string>
    <string name="https_bit_ly_2w2nqvv">https://bit.ly/2w2nQVv</string>
    <string name="http_soundbible_com_1830_sad_trombone_html">http://soundbible.com/1830-Sad-Trombone.html</string>
    <string name="http_www_orangefreesounds_com_wp_content_uploads_2018_11_success_sound_effect_zip">http://www.orangefreesounds.com/wp-content/uploads/2018/11/Success-sound-effect.zip</string>
</resources>
