<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/virus_background"
    tools:context=".WelcomeActivity">


    <ImageView
        android:id="@+id/virus4"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="164dp"
        android:src="@drawable/virus1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

    <ImageView
        android:id="@+id/virus1"
        android:layout_width="188dp"
        android:layout_height="86dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="64dp"
        android:src="@drawable/virus5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/virus2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="156dp"
        android:layout_marginBottom="250dp"
        android:src="@drawable/virus1"
        app:layout_constraintBottom_toTopOf="@+id/devNames"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/virus3"
        android:layout_width="121dp"
        android:layout_height="73dp"
        android:layout_marginStart="500dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/virus_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
        app:layout_constraintVertical_bias="0.826" />

    <ImageView
        android:id="@+id/virus5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="225dp"
        android:src="@drawable/virus5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nosifer"
        android:text="@string/welcomeTitle"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/skipButton"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="skip" />

    <TextView
        android:id="@+id/devNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/devNames"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="By Amos and Don" />

</androidx.constraintlayout.widget.ConstraintLayout>